# agent-artifact-publisher

./: .gitignore  CODEX_ANTIGRAVITY_PROMPT.md  README.md  live_verify.py  pyproject.toml
.artifact-publisher/github/: pr-body.md
agent_artifact_publisher/: cli.py  config.py  model.py  orchestrator.py  renderer.py  scanner.py
agent_artifact_publisher/mcp/: server.py  tools.py
agent_artifact_publisher/playbook/: AGENT_PLAYBOOK.md  completion-checklist.md
agent_artifact_publisher/publishers/: gdrive_wiki.py  github.py  notion.py
agent_artifact_publisher/verifiers/: filesystem.py
tests/: test_agent_artifact_publisher.py
