[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-artifact-publisher"
version = "0.1.0"
description = "Agent-facing artifact publisher pack for local AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
artifact-publish = "agent_artifact_publisher.cli:main"

[tool.setuptools.packages.find]
include = ["agent_artifact_publisher*"]

[tool.setuptools.package-data]
agent_artifact_publisher = ["playbook/*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
